public/assets/css/style.css
/* Google Font */
@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;700&display=swap");

body {
  font-family: "Poppins", sans-serif;
  overflow-x: hidden;
}
h1 h2 h3 h4 h5 h6{
  font-family: "Poppins", sans-serif;
}
.navbar {
  position: relative;
  /* display:inline; */
  flex-wrap: wrap;
  align-items: center;
  justify-content: space-between;
  padding-top: 0.5rem;
  padding-bottom: 0.5rem;
  align-content: center;
}
.navbar .navbar-nav .nav-link {
  color: #000000;
  font-size: 1.1em;
}
.navbar .navbar-nav .nav-link:hover{
  color: #2c3b53c2;
}
.sm-icons {
flex-direction: row;
}
/* Header */
.bg-dark {
  background-color: #ffff!important;
}
.navbar-brand img{
 
}


.fa-search:before {
  content: "\f002";
  margin-right: 10px;
  color: #13293D;
}
.fa-user:before {
  content: "\f007";
  color: #2c3b53;
  margin-left: 10px;
}
.menuList{
  margin-right: 80px !important;
}

.navbar .navbar-nav .nav-link {
  color: #2c3b53;
  font-size: 15px;
  font-weight: 600;
  font-family: "Poppins", sans-serif;
}
.menuList li{
  margin-right: 30px;
}
.navbar-nav li{
  display: flex;
  align-items: center;
}
.navBar{
  padding: 0px 50px;
}

ul.dropdown-menu.dropdown-menu-light.show .navbar-nav li a{
  margin-right: 5px !important;

}

/* Hero Section */

.hero-section {
  padding: 10% 0% 0% 0%;
  background-image: url("../img/banner.png");
  background-position: bottom left;
  background-size: auto;
  background-repeat: repeat-x;
}

.car{
  position: relative;
  top: -17px;
}
.moving-left-tyr{
  position: absolute;
  top: 99px;
  left: 52px;
}
.moving-left-tyr img{
  width: 49px !important;
}
.moving-right-tyr{
  position: absolute;
  top: 99px;
  left: 246px;
}
.moving-right-tyr img{
  width: 49px !important;
}
.hero-section{animation:animate 10s linear infinite}
.circle1{animation:spin1 .5s infinite linear;-webkit-animation:spin1 1s infinite linear}
@keyframes spin1{0%{-moz-transform:rotate(320deg);-webkit-transform:rotate(320deg);-o-transform:rotate(320deg);-ms-transform:rotate(320deg)}
100%{-moz-transform:rotate(640deg);-webkit-transform:rotate(640deg);-o-transform:rotate(680deg);-ms-transform:rotate(680deg)}
}
@-webkit-keyframes spin1{0%{-moz-transform:rotate(320deg);-webkit-transform:rotate(320deg);-o-transform:rotate(320deg);-ms-transform:rotate(320deg)}
100%{-moz-transform:rotate(680deg);-webkit-transform:rotate(680deg);-o-transform:rotate(680deg);-ms-transform:rotate(680deg)}
}
.circle2{animation:spin1 .5s infinite linear;-webkit-animation:spin1 1s infinite linear}
@keyframes spin2{0%{-moz-transform:rotate(320deg);-webkit-transform:rotate(320deg);-o-transform:rotate(320deg);-ms-transform:rotate(320deg)}
100%{-moz-transform:rotate(640deg);-webkit-transform:rotate(640deg);-o-transform:rotate(680deg);-ms-transform:rotate(680deg)}
}
@-webkit-keyframes spin2{0%{-moz-transform:rotate(320deg);-webkit-transform:rotate(320deg);-o-transform:rotate(320deg);-ms-transform:rotate(320deg)}
100%{-moz-transform:rotate(680deg);-webkit-transform:rotate(680deg);-o-transform:rotate(680deg);-ms-transform:rotate(680deg)}
}
@keyframes animate{from{background-position:0 0;}
to{background-position:calc(100% - 100vw) 0;}
}

.hero-section h1 {
  font-weight: 700;
  color: rgba(75, 75, 75, 1);
    font-size: 65px;
}
.hero-section h3 span {
  color: #f24026;
  font-weight: 700;
}
.blurb h3{
  font-weight: 400;
  font-size: 35px;
}
.blurb p{
  font-size: 24px;
  font-weight: 700;
}

.hero-section .car img {
  width: 23%;
  -moz-animation: fadeinphoto 7s 20s infinite;
  -webkit-animation: fadeinphoto 7s 20s infinite;
  -o-animation: fadeinphoto 7s 20s infinite;
  animation: fadeinphoto 7s 20s infinite;
}

g{
  padding: 20px;
  border-radius: 0px;
}

.hero-section .btn {
  padding: 20px;
  background: #f24026;
  border-radius: 0px;
}

.hero-section .search-form {
  background: #fff;
  box-shadow: 0px 0px 9px 4px rgb(0 0 0 / 20%);
  padding: 15px 15px 0px 15px;
}

/* Support Section */

.support_section {
  background: #13293D;
}

.support_section p {
  font-size: 18px;
  
}

/* How it Works */

.how_it_Works {
  padding: 5% 0% 10% 0%;
}

.how_it_Works .title h2 {
  font-size: 26px !important;
  font-weight: bold !important; 
  list-style: 15px !important;
  color: #2c3b53 !important;
}

.how_it_Works .title p {
  font-size: 20px;
  font-weight: 500;
  color: #2c3b53;
}

.how_it_Works .steps h2 {
  font-size: 20px;
  font-weight: 600;
  line-height: 37.5px;
  font-style: normal;
}

.how_it_Works .steps .blurb h2 {
  font-size: 20px;
  font-weight: 600;
  line-height: 20px;
  padding-bottom: 10px;
  color: rgba(19, 41, 61, 1);
}
.how_it_Works .steps .blurb p {
  font-size: 20px;
  font-weight: 400;
  color: #747474;
  line-height: 30px;
  /* padding-bottom: 10px; */
}

/* Buy A Car */

/* .buy_a_car {
  /* background: rgba(242, 242, 242, 0.5); /
} */

.form_overlap_row {
  margin-top: -10%;
  background: #fff;
  box-shadow: 0px 0px 5px 2px rgba(0, 0, 0, 0.2);
  padding: 50px 0px !important;
}
.buy_a_car .blurb p{
  font-size: 20px;
    font-weight: 400;
    color: #747474;
    line-height: 30px;
}

.buy_a_car .title p {
  font-size: 18px;
  font-weight: normal;
}

.buy_a_car .title h2 {
  font-size: 26px;
  font-weight: 600;
  line-height: 15px;
  padding-bottom: 10px;
}

/* Multi step Car selling form */

#msform {
  text-align: center;
  position: relative;
  margin-top: 20px;
  z-index: 0;
  font-family: "Poppins", sans-serif;
}

#msform fieldset .form-card {
  background: white;
  border: 0 none;
  border-radius: 0px;
  /* box-shadow: 0 2px 2px 2px rgba(0, 0, 0, 0.2); */
  padding: 20px 40px 0px 40px;
  box-sizing: border-box;
  width: 94%;
  margin: 0 3% 0px 3%;
  position: relative;
}

#msform fieldset {
  background: white;
  border: 0 none;
  border-radius: 0.5rem;
  box-sizing: border-box;
  width: 100%;
  margin: 0;
  padding-bottom: 20px;
  position: relative;
}

#msform fieldset:not(:first-of-type) {
  display: none;
}
/* ... */

